--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "gatsby-starter-cv",
+  "name": "portifolio",
   "private": true,
-  "description": "A simple starter to get up and developing your digital curriculum with GatsbyJS",
+  "description": "",
   "version": "0.0.1",
-  "author": "Francisco Santos <yoshi.df@gmail.com>",
+  "author": "Lucas Mendonça <lucasmendonca.dev@gmail.com>",
   "dependencies": {
     "babel-plugin-styled-components": "1.10.6",
+    "date-fns": "^2.14.0",
     "gatsby": "2.18.7",
     "gatsby-image": "2.2.34",
     "gatsby-plugin-google-analytics": "2.1.29",
@@ -16,12 +17,14 @@
     "gatsby-plugin-styled-components": "3.1.14",
     "gatsby-source-filesystem": "2.1.40",
     "gatsby-transformer-sharp": "2.3.7",
+    "pdf-viewer-reactjs": "^2.0.6",
     "prop-types": "15.7.2",
     "react": "16.12.0",
     "react-awesome-styled-grid": "3.0.7",
     "react-dom": "16.12.0",
     "react-helmet": "5.2.1",
     "react-icons": "3.10.0",
+    "react-particles-js": "^3.2.1",
     "simple-json-fetch": "1.0.1",
     "styled-components": "4.4.1"
   },
@@ -38,14 +41,14 @@
     "test": "echo \"Write tests! -> https://gatsby.app/unit-testing\""
   },
   "devDependencies": {
-    "gh-pages": "2.1.1",
+    "gh-pages": "^3.0.0",
     "prettier": "1.19.1"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/santosfrancisco/gatsby-starter-cv"
+    "url": "https://lsm-5.github.io/portifolio"
   },
   "bugs": {
-    "url": "https://github.com/santosfrancisco/gatsby-starter-cv/issues"
+    "url": "https://lsm-5.github.io/portifolio/issues"
   }
 }
